--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
 
         <footer>
             <div class="social-icons">
-                <a href="https://www.linkedin.com/in/lankesh-bhagat" target="_blank" aria-label="LinkedIn"><i
+                <a href="https://www.linkedin.com/in/lankesh-bhagat-158717209?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BJomuXOPqTEmx5%2Bv8wbMZeA%3D%3D" target="_blank" aria-label="LinkedIn"><i
                         class="fab fa-linkedin"></i></a>
                 <a href="https://github.com/lankesh0806" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
             </div>
