--- a/index.html
+++ b/index.html
@@ -82,9 +82,7 @@
                 <div class="skill-category">
                     <h4>Programming Languages</h4>
                     <ul>
-                        <li><i class="fas fa-angle-right"></i> Java</li>
-                        <li><i class="fas fa-angle-right"></i> Python</li>
-                        <li><i class="fas fa-angle-right"></i> JavaScript</li>
+                        <li><i class="fas fa-angle-right"></i>Core Java</li>
                         <li><i class="fas fa-angle-right"></i> SQL</li>
                     </ul>
                 </div>
@@ -100,7 +98,6 @@
                     <ul>
                         <li><i class="fas fa-angle-right"></i> SQL</li>
                         <li><i class="fas fa-angle-right"></i> MySQL</li>
-                        <li><i class="fas fa-angle-right"></i> PostgreSQL</li>
                     </ul>
                 </div>
                 <div class="skill-category">
