--- a/index.html
+++ b/index.html
@@ -82,22 +82,23 @@
                 <div class="skill-category">
                     <h4>Programming Languages</h4>
                     <ul>
-                        <li><i class="fas fa-angle-right"></i>Core Java</li>
+                        <li><i class="fas fa-angle-right"></i> Java</li>
                         <li><i class="fas fa-angle-right"></i> SQL</li>
                     </ul>
                 </div>
                 <div class="skill-category">
                     <h4>Web Technologies</h4>
                     <ul>
-                        <li><i class="fas fa-angle-right"></i> HTML</li>
-                        <li><i class="fas fa-angle-right"></i> CSS</li>
+                        <li><i class="fas fa-angle-right"></i> HTML5</li>
+                        <li><i class="fas fa-angle-right"></i> CSS3</li>
+                        <li><i class="fas fa-angle-right"></i> Javascript</li>
                     </ul>
                 </div>
                 <div class="skill-category">
                     <h4>Databases</h4>
                     <ul>
-                        <li><i class="fas fa-angle-right"></i> SQL</li>
                         <li><i class="fas fa-angle-right"></i> MySQL</li>
+                        <li><i class="fas fa-angle-right"></i> PostgreSQL</li>
                     </ul>
                 </div>
                 <div class="skill-category">
@@ -108,19 +109,20 @@
                         <li><i class="fas fa-angle-right"></i> VS Code</li>
                         <li><i class="fas fa-angle-right"></i> Eclipse/IntelliJ IDEA</li>
                         <li><i class="fas fa-angle-right"></i> Jupyter Notebook</li>
-                        <li><i class="fas fa-angle-right"></i> Microsoft Excel</li>
+                        <li><i class="fas fa-angle-right"></i> Pgadmin4</li>
                     </ul>
                 </div>
                 <div class="skill-category">
-                    <h4>Concepts & Methodologies</h4>
+                    <h4>Core Concepts</h4>
                     <ul>
-                        <li><i class="fas fa-angle-right"></i> Data Analysis</li>
                         <li><i class="fas fa-angle-right"></i> Object-Oriented Programming (OOP)</li>
-                        <li><i class="fas fa-angle-right"></i> Machine Learning Basics</li>
-                        <li><i class="fas fa-angle-right"></i> Web Development Principles</li>
-                        <li><i class="fas fa-angle-right"></i> Collection Framework</li>
                         <li><i class="fas fa-angle-right"></i> Multithreading</li>
                         <li><i class="fas fa-angle-right"></i> Exception Handling</li>
+                         <li><i class="fas fa-angle-right"></i> Collection Framework</li>
+                        <li><i class="fas fa-angle-right"></i> File Handling</li>
+                        <li><i class="fas fa-angle-right"></i> Web Development Principles</li>
+                        <li><i class="fas fa-angle-right"></i> Machine Learning Basics</li>
+                        
                     </ul>
                 </div>
             </div>
