--- a/index.html
+++ b/index.html
@@ -316,6 +316,7 @@
                 </ul>
                 <a href="https://github.com/lankesh0806/Library_Management_System" target="_blank" class="github-link-btn">Open Project <i class="fab fa-github"></i></a>
             </div>
+        <!--
             <div class="project-item">
                 <h3>9. Student Report Card System (Java Console-Based)</h3>
                 <ul>
@@ -333,6 +334,27 @@
                 </ul>
                 <a href="https://github.com/lankesh0806/Student_Report_Card_System" target="_blank" class="github-link-btn">Open Project <i class="fab fa-github"></i></a>
             </div>
+        -->
+
+        <div class="project-item">
+                <h3>9. Employee Management System | Java, JDBC, PostgreSQL, Maven</h3>
+                <ul>
+                    <li>Designed and implemented a standalone console application using Java and JDBC to manage corporate employee records with a PostgreSQL backend.</li>
+                    <li>Created and optimized a relational database schema in PostgreSQL including an employees table with fields for empid, Name, salary, and department.</li>
+                    <li>Developed full CRUD (Create, Read, Update, Delete) capabilities, allowing for seamless data entry, retrieval, and modification of employee records..</li>
+                    <li>
+                        <b>Technologies</b>:
+                        <ul>
+                            <li><b>Languages</b>: Java (Core)</li>
+                            <li><b>Database</b>: PostgreSQL, SQL</li>
+                            <li><b>Tools & Frameworks</b>: JDBC, Maven, Eclipse IDE, Git</li>
+                            <li><b>Core Concepts</b>: Object-Oriented Programming (OOP), RDBMS, DAO Pattern</li>
+                        </ul>
+                    </li>
+                </ul>
+                <a href="https://github.com/lankesh0806/Employee_Management_System_JDBC" target="_blank" class="github-link-btn">Open Project <i class="fab fa-github"></i></a>
+            </div>
+
         </section>
 
         <section id="certifications" class="certifications">
